--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,10 @@
   <name>Archetype - LinkUpSocialMediaPlatform</name>
   <url>http://maven.apache.org</url>
   <packaging>pom</packaging>
-
   <modules>
     <module>ApiGatewayService</module>
     <module>DiscoveryService</module>
     <module>AuthServcie</module>
-    <module>MessagingService</module>
+    <module>ProfileService</module>
   </modules>
 </project>
