--- a/ProfileService/src/main/resources/application.properties
+++ b/ProfileService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=MessagingService
+spring.application.name=ProfileService
 server.port=9002
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
