--- a/MessagingService/src/main/resources/application.properties
+++ b/MessagingService/src/main/resources/application.properties
@@ -1,12 +1,10 @@
-spring.application.name=ProfileService
-server.port=9002
+spring.application.name=MessagingService
+server.port=9003
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+spring.datasource.url=jdbc:h2:mem:msg_db
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:prof_db
 spring.datasource.username=user
 spring.datasource.password=
 spring.h2.console.enabled=true
-
-spring.kafka.consumer.group-id=msgGroup
