--- a/MessagingService/src/main/resources/application.properties
+++ b/MessagingService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=MessagingService
+spring.application.name=MESSAGINGSERVICE
 server.port=9003
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
